; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/em28xx/extr_em28xx-dvb.c_stop_streaming.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/em28xx/extr_em28xx-dvb.c_stop_streaming.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.em28xx_dvb = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.em28xx* }
%struct.em28xx = type { i32 }

@EM28XX_SUSPEND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.em28xx_dvb*)* @stop_streaming to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stop_streaming(%struct.em28xx_dvb* %0) #0 {
  %2 = alloca %struct.em28xx_dvb*, align 8
  %3 = alloca %struct.em28xx*, align 8
  store %struct.em28xx_dvb* %0, %struct.em28xx_dvb** %2, align 8
  %4 = load %struct.em28xx_dvb*, %struct.em28xx_dvb** %2, align 8
  %5 = getelementptr inbounds %struct.em28xx_dvb, %struct.em28xx_dvb* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.em28xx*, %struct.em28xx** %6, align 8
  store %struct.em28xx* %7, %struct.em28xx** %3, align 8
  %8 = load %struct.em28xx*, %struct.em28xx** %3, align 8
  %9 = call i32 @em28xx_uninit_isoc(%struct.em28xx* %8)
  %10 = load %struct.em28xx*, %struct.em28xx** %3, align 8
  %11 = load i32, i32* @EM28XX_SUSPEND, align 4
  %12 = call i32 @em28xx_set_mode(%struct.em28xx* %10, i32 %11)
  ret i32 0
}

declare dso_local i32 @em28xx_uninit_isoc(%struct.em28xx*) #1

declare dso_local i32 @em28xx_set_mode(%struct.em28xx*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
